testes e restante de endpoints
